--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p><strong>Je m'oriente vers les métiers du web</strong></p>
         <p><strong>Benjamin Van Oostveldt</strong> &copy;2024</p>
     </footer>
+    <script src="javascript/script.js"></script>
 </body>
 
 </html>
